# paita

./: .flake8  .gitignore  LICENSE  README.md  mypy.ini  pyproject.toml
.devcontainer/: Dockerfile
.github/workflows/: code_quality.yml  head_workflow.yml  main_workflow.yml  pr_workflow.yml  workflow.yml
docs/: development.md  publish.md
paita/: __main__.py
paita/ai/: bedrock.py  callbacks.py  chat.py  chat_history.py  enums.py  models.py
paita/localization/: labels.py
paita/tui/: app.py  error_screen.py  message_box.py  settings_screen.py
paita/tui/styles/: app.tcss  error_screen.tcss  message_box.tcss  wait_screen.tcss
paita/utils/: __init__.py  asyncify.py  logger.py  settings_manager.py
src/paita/: __about__.py
src/paita/ai/: bedrock.py  callbacks.py  chat.py  chat_history.py  enums.py  message.py  mock_model.py  models.py
src/paita/ai/services/: bedrock.py  ollama.py  openai.py  service.py
src/paita/llm/: callbacks.py  chat.py  chat_history.py  message.py  models.py
src/paita/llm/services/: bedrock.py  ollama.py  openai.py  service.py
src/paita/localization/: labels.py
src/paita/rag/: models.py  rag_manager.py
src/paita/settings/: base_settings.py  llm_settings.py  models.py  rag_settings.py
src/paita/settings/llm_settings/: llm_settings.py  models.py
src/paita/settings/rag_settings/: models.py  rag_settings.py
src/paita/tui/: app.py  error_screen.py  factory.py  llm_settings_screen.py  message_box.py  multi_line_input.py  rag_settings_screen.py  settings_screen.py  wait_screen.py
src/paita/tui/styles/: app.tcss  message_box.tcss  rag_settings_screen.tcss  settings_screen.tcss
src/paita/utils/: config_dirs.py  file_utils.py  json_utils.py  logger.py  settings_manager.py  settings_model.py  string_utils.py
tests/: test_cache3.py  test_settings_manager.py  test_string_utils.py
tests/ai/: test_chat.py  test_message.py  test_models.py
tests/integration/: __init__.py
tests/integration/ai/: test_chat.py  test_models.py
tests/integration/llm/: test_chat.py  test_models.py
tests/integration/rag/: test_rag.py  test_rag_manager.py
tests/integration/settings/: test_base_settings.py
tests/integration/tui/: test_factory.py
tests/unit/: test_cache3.py  test_settings_manager.py  test_string_utils.py
tests/unit/ai/: test_chat.py
tests/unit/llm/: test_chat.py  test_message.py
tests/unit/tui/: test_factory.py
tests/unit/utils/: test_file_utils.py  test_json_utils.py  test_settings_manager.py  test_string_utils.py
