[project]
name = "paita"
dynamic = ["version"]
description = 'paita - Python AI Textual Assistant'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["python", "textual", "ai", "chat", "openai", "chatgpt", "aws", "bedrock"]
authors = [
  { name = "Ville Kärkkäinen", email = "ville.karkkainen@outlook.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "textual~=0.78.0",
  # "boto3~=1.35.8",  # rely on boto3 version coming from langchain-aws
  "loguru~=0.7.2",
  "langchain-core~=0.2.36",
  "langchain-community~=0.2.14",
  "langchain-openai~=0.1.23",
  "langchain-aws~=0.1.17",
  "langchain-ollama~=0.1.2",
  "langchain~=0.2.15",
  "appdirs~=1.4.4",
  "pydantic~=2.8.2",
  "cache3~=0.4.3",
  "aiofiles~=24.1.0",
  "pyperclip~=1.9.0",
  "eval-type-backport~=0.2.0",
]

[project.urls]
Documentation = "https://github.com/villekr/paita#readme"
Issues = "https://github.com/villekr/paita/issues"
Source = "https://github.com/villekr/paita"

[project.scripts]
paita = "paita.tui.app:main"

[tool.hatch.version]
path = "src/paita/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
  "flake8",
  "isort",
  "black",
  "textual-dev",
  "pytest-asyncio",
  "flake8-bugbear",
  "flake8-bandit",
  "pytest-cov",
  "mypy",
  "boto3-stubs",
  "appdirs-stubs",
  "types-aiofiles"
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
github-test-cov = 'coverage run -m pytest -m "not integration" {args:tests}'
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]
github-cov = [
  "github-test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[[tool.hatch.envs.test.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]

[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/pypi_publish tests}"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests that require access to AI services and models (deselect with '-m \"not integration\"')",
    "serial",
]

[tool.coverage.run]
source_pkgs = ["paita", "tests"]
branch = true
parallel = true
omit = [
  "src/paita/__about__.py",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.paths]
paita = ["src/paita", "*/paita/src/paita"]
tests = ["tests", "*/paita/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.ruff.lint]
ignore = [
  "SIM117",
  "A002",
  "RUF012"
]